--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular-route.js"></script>
-  <script src = "app.js"></script>
+
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -62,7 +62,7 @@
 <!-- Page Content -->
 
 <div ng-view></div>
-
+<script src = "./app.js"></script>
 </body>
 </html>
   
