--- a/client/index.html
+++ b/client/index.html
@@ -56,7 +56,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-    <script src="./app.js"></script>
+    <script src="app.js"></script>
 
 </body>
 </html>
