--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>GreenamsSocial</title>
+  <title>GreenAms Social</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
-        background-image: url('https://www.xl.co.id/sites/harmony_web177/themes/xlharmony/assets/img/bg/og-default.jpg');
+        background-image: url('https://scontent.fsgn2-1.fna.fbcdn.net/v/t1.0-9/20883047_1366491023471643_1741232120989624938_n.jpg?_nc_cat=0&oh=96a436e218dc831333ffc387cef06640&oe=5B35B9E3');
         min-height: 100%;
     }
     </style>
