--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="/favicon.ico">
   <script src="//connect.facebook.net/en_US/all.js"></script>
  
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
