--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,9 @@
   <link href='//fonts.googleapis.com/css?family=Raleway:400,500,600,700,800' rel='stylesheet' type='text/css'>
   <link href='//fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
   <link rel="manifest" href="/manifest.json">
+  <style>
+    
+  </style>
 </head>
 <body>
   <app-root></app-root>
